BLC-261 - Warnings are sometimes shown in the log related to a criteria mapping not being found for a property